# TTRPG_Editor_cpp

./: Application.cpp  Application.hpp  CMakeLists.txt  Helpers.hpp  TTRPG.db  WindowTypes.hpp  imgui.ini  main.cpp
Controllers/: IWindowController.hpp
Controllers/Editor/: EditorWindowController.cpp  EditorWindowController.hpp
Controllers/Editor/Widgets/: IWidgetController.hpp
Controllers/Editor/Widgets/Character/CharacterCreator/: CharacterCreatorController.cpp  CharacterCreatorController.hpp
Controllers/Editor/Widgets/Character/CharacterSheet/: CharacterSheetController.cpp
Controllers/Editor/Widgets/CharacterCreator/: CharacterCreatorController.cpp  CharacterCreatorController.hpp
Controllers/Editor/Widgets/CharacterSheet/: CharacterSheetController.cpp  CharacterSheetController.hpp
Controllers/MainMenu/: MainMenuWindowController.cpp  MainMenuWindowController.hpp
Models/: DataBaseManager.cpp  DataBaseManager.hpp
Models/Campaign/: Campaign.hpp
Models/Character/: CharacterModel.hpp
Models/Rulesets/: IRuleSet.hpp
Models/Rulesets/DND/: DND5e.hpp
Views/: IWindowView.hpp
Views/Editor/: EditorView.cpp  EditorView.hpp  EditorWindowController.cpp  EditorWindowController.hpp  EditorWindowView.cpp  EditorWindowView.hpp
Views/Editor/Widgets/: DockableWidget.cpp  DockableWidget.hpp
Views/Editor/Widgets/Character/: CharacterSheetWidget.hpp
Views/Editor/Widgets/Character/CharacterCreator/: CharacterCreatorView.cpp  CharacterCreatorView.hpp
Views/Editor/Widgets/Character/CharacterSheet/: CharacterSheetView.cpp  CharacterSheetView.hpp
Views/MainMenu/: MainMenuWindowController.cpp  MainMenuWindowController.hpp  MainMenuWindowView.cpp  MainMenuWindowView.hpp
imgui/examples/example_sdl2_directx11/: example_sdl2_directx11.vcxproj
imgui/examples/example_sdl3_opengl3/: example_sdl3_opengl3.vcxproj
imgui/examples/example_sdl3_sdlgpu3/: example_sdl3_sdlgpu3.vcxproj
imgui/examples/example_sdl3_sdlrenderer3/: example_sdl3_sdlrenderer3.vcxproj
imgui/examples/example_sdl3_vulkan/: example_sdl3_vulkan.vcxproj
imgui/examples/example_win32_directx9/: example_win32_directx9.vcxproj
